%%{init: {'theme': 'base', 'themeVariables': { 'background': '#ffffff', 'primaryColor': '#ffffff', 'primaryTextColor': '#000000', 'primaryBorderColor': '#000000', 'lineColor': '#000000', 'secondaryColor': '#ffffff', 'tertiaryColor': '#ffffff' }}}%%
classDiagram
    class User {
        +ObjectId id
        +String name
        +String email
        +String password
        +String role
        +Boolean isVerified
        +String verificationStatus
        +String[] documents
        +String profileImage
        +String phone
        +Boolean isActive
        +Date createdAt
        +Date updatedAt
        +comparePassword(candidatePassword)
        +toJSON()
    }

    class Property {
        +ObjectId id
        +String title
        +String description
        +Number price
        +String city
        +String address
        +String[] images
        +String[] amenities
        +String propertyType
        +String propertyCategory
        +String rentalType
        +Number bedrooms
        +Number bathrooms
        +Number area
        +Boolean isApproved
        +Boolean isActive
        +Number views
        +Number inquiries
        +Date availableFrom
        +Date createdAt
        +Date updatedAt
    }

    class Inquiry {
        +ObjectId id
        +String message
        +String status
        +String tenantName
        +String tenantEmail
        +String tenantPhone
        +String landlordResponseMessage
        +Date landlordRespondedAt
        +Date createdAt
        +Date updatedAt
    }

    class Favorite {
        +ObjectId id
        +Date createdAt
        +Date updatedAt
    }

    User "1" --> "0..*" Property : landlord
    User "1" --> "0..*" Favorite : marks
    Property "1" --> "0..*" Favorite : favorited
    User "1" --> "0..*" Inquiry : tenant creates
    User "1" --> "0..*" Inquiry : landlord receives
    Property "1" --> "0..*" Inquiry : has
